improve auto build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "triggerTaskOnSave.selectedTask": "Run C",
   "triggerTaskOnSave.on": true,
+  "triggerTaskOnSave.restart": true,
   "triggerTaskOnSave.showNotifications": false,
   "triggerTaskOnSave.tasks": {
     "build": ["*.c"]
