--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,13 +4,13 @@
     {
       "label": "Run C",
       "type": "shell",
-      "command": "gcc \"${file}\" -o ${fileBasenameNoExtension} && ./${fileBasenameNoExtension}"
+      "command": "gcc \"${file}\" -lm -o '${fileDirname}/${fileBasenameNoExtension}' && '${fileDirname}/${fileBasenameNoExtension}'"
     }
   ],
   "presentation": {
     "echo": true,
     "reveal": "always",
-    "focus": true,
+    "focus": false,
     "panel": "shared",
     "showReuseMessage": false,
     "clear": true
